# myBrowser

./: .gitignore
myBrowser/: browsers_config.xlsx  config.json  config.yaml  import_addr_examples.json  main.py  pyproject.toml  task.csv
myBrowser/src/project/: base_automation.py  browser_manager.py  common_auto.py  okxweb3_automation.py  twitter_automation.py
myBrowser/src/utils/: config_loader.py  eth_manager.py  newethadd.py
myBrowser/tests/: test_browser_mananger.py  test_config.json  test_config_loader.py
