[tool.poetry]
name = "mybrowser"
version = "0.1.0"
description = ""
authors = ["LGrok <luolin.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
config-json = "^0.0.3"
selenium = "^4.20.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
